# da-metric-reader

./: .env.example  Cargo.toml  DATA_FLOW.md  OUTPUT_EXAMPLE.md  PRD.md  README.md  USAGE_EXAMPLES.md  config.toml
docs/: ARCHITECTURE.md  DA_BLOB.md  DA_POSTING_STRATEGY.md  ENV_SETUP.md  LOGGING.md  METRICS_IMPLEMENTATION.md  MNEMONIC_TO_KEY.md  SAMPLING_LOGIC.md  SETUP_SUMMARY.md
src/: batch.rs  config.rs  handlers.rs  main.rs  otlp.rs  sampler.rs  storage.rs  types.rs  utils.rs
src/crypto/: mod.rs
src/da/: mod.rs
src/metrics/: mod.rs
src/otlp/: handlers.rs  mod.rs
