[package]
name = "da-reader"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
axum = "0.7"
prost = "0.14"
opentelemetry-proto = { version = "0.31.0", features = [
    "gen-tonic",
    "with-serde",
] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flate2 = "1"
toml = "0.8"
blake3 = "1.5"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
chrono = "0.4"
hex = "0.4"
